--- a/src/app/basket/basket.component.html
+++ b/src/app/basket/basket.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>{{title}}</h1>
+    <app-header [title]="'Paddle Subscription Basket'"></app-header>
     <div class="row">
         <div class="col-8"  *ngIf="!loadedConfig">
             <div class="col-12 text-center"><img src="/assets/images/seuaOqf.gif" /></div>
