Adding volume discounts

--- a/src/app/basket/basket.component.css
+++ b/src/app/basket/basket.component.css
@@ -22,3 +22,22 @@ p.large {
     font-size: 18px;
     font-weight: bold;
 }
+h4 {
+    padding: 10px;
+    width: 100%;
+    font-family: 'CiscoSansRegular', Arial, Helvetica, sans-serif;   
+    background-color: #dbdbdbda;
+}
+h4.rounded-header {
+    line-height: 25px;
+    font-family: 'CiscoSansRegular', Arial, Helvetica, sans-serif;
+    padding: 8px 0px 8px 20px;
+    background-color: #5690a8;
+    color: #fff;
+    margin-bottom: 20px;
+    text-align: left;
+}
+.no-pad-side {
+    padding-left: 0px;
+    padding-right: 0px;
+}
